--- a/index.html
+++ b/index.html
@@ -2,10 +2,128 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
+    <header>
+      <div class="header-item1">
+        <div class="header-logo"><img src="" alt=""></div>
+        <nav class="menu">
+          <ul class="menu-list">
+            <li class="active"><a href="#">Каталог</a>
+              <ul class="popup-list">
+                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Сливочное</a></li>
+                <li class="active"><a href="#">Щербеты</a></li>
+                <li><a href="#">Фруктовый лед</a></li>
+                <li><a href="#">Мелорин</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Доставка и оплата</a></li>
+            <li><a href="#">О Компании</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="header-item2">
+        <span class="item2-search"><img src="" alt=""></span>
+        <span class="item2-signin"><a href="#"><img src="" alt="">Вход</a></span>
+        <span class="item2-shipcart"><a href="#"><img src="" alt="">Пусто</a></span>
+      </div>
+    </header>
+    <content>
+        <div class="time">
+          <p>
+            С 10 до 20, ежедневно <br>
+          <b>8 812 450-25-25</b>
+          </p>
+        </div>
+        <div class="slider-box">
+          <div class="bg-image1"><img src="" alt="">
+            <p>
+              Крем-брюле и пломбир <bg>
+               с малиновым джемом
+             </p>
+          </div>
+          <div class="bg-image2"><img src="" alt="">
+            <p>
+              Шоколадный пломбир<bg>
+              и лимонный сорбет
+            </p>
+          </div>
+          <div class="bg-image3"><img src="" alt="">
+            <p>
+              Пломбир с помадкой<bg>
+              и клубничный щербет
+            </p>
+          </div>
+        </div>
+        <div class="control-box">
+          <input type="radio" name="" value="">
+          <input type="radio" name="" value="">
+          <input type="radio" name="" value="">
+          <div class="control-button"><a href="#">Дайте оба!</a></div>
+        </div>
+        <div class="banner">
+          <ul class="banner-list">
+            <li>
+              <h2>Малинка даром!</h2>
+              <p>
+                При покупке 2 кг любого фруктового мороженого,<br>
+                добавим в ваш заказ добавим банку<br>
+                малинового варенья бесплатно<br>
+              </p>
+              <a href="#">Хочу варенье!</a>
+            </li>
+            <li>
+              <h2>Шоколадки даром!</h2>
+              <p>
+                При покупке 2 кг пломбира, добавим в ваш<br>
+                заказ упаковку вкуснейшей шоколадной<br>
+                присыпки совершенно бесплатно.<br>
+              </p>
+              <a href="#">Хочу шоколадки!</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hits">
+          <ul class="hits-item">
+            <li>
+              <img src="" alt="">
+              <img src="" alt="">
+              <span>310/кг</span>
+              <p>
+                Сливочное с апельсиновым джемом и цитрусовой стружкой
+              </p>
+            </li>
+            <li>
+              <img src="" alt="">
+              <img src="" alt="">
+              <span>380/кг</span>
+              <p>
+                Сливочно-кофейное с кусочками шоколада
+              </p>
+            </li>
+            <li>
+              <img src="" alt="">
+              <img src="" alt="">
+              <span>355/кг</span>
+              <p>
+                Сливочно-клубничное с присыпкой из белого шоколада
+              </p>
+            </li>
+            <li>
+              <img src="" alt="">
+              <img src="" alt="">
+              <span>415/кг</span>
+              <p>
+                Сливочное крем-брюле с карамельной подливкой
+              </p>
+            </li>
+          </ul>
+        </div>
+    </content>
+    <footer></footer>
     <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
 
   </body>
