--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <div class="header-item1">
-        <div class="header-logo"><img src="" alt=""></div>
+        <div class="header-logo"><img src="#" alt="#"></div>
         <nav class="menu">
           <ul class="menu-list">
             <li class="active"><a href="#">Каталог</a>
@@ -26,95 +26,95 @@
         </nav>
       </div>
       <div class="header-item2">
-        <span class="item2-search"><img src="" alt=""></span>
-        <span class="item2-signin"><a href="#"><img src="" alt="">Вход</a></span>
-        <span class="item2-shipcart"><a href="#"><img src="" alt="">Пусто</a></span>
+        <span class="item2-search"><img src="#" alt="#"></span>
+        <span class="item2-signin"><a href="#"><img src="#" alt="#">Вход</a></span>
+        <span class="item2-shipcart"><a href="#"><img src="#" alt="#">Пусто</a></span>
       </div>
     </header>
-    <content>
+    <section>
         <div class="time">
           <p>
-            С 10 до 20, ежедневно <br>
+            С 10 до 20, ежедневно
           <b>8 812 450-25-25</b>
           </p>
         </div>
         <div class="slider-box">
-          <div class="bg-image1"><img src="" alt="">
+          <div class="bg-image1"><img src="#" alt="#">
             <p>
-              Крем-брюле и пломбир <bg>
+              Крем-брюле и пломбир
                с малиновым джемом
              </p>
           </div>
-          <div class="bg-image2"><img src="" alt="">
+          <div class="bg-image2"><img src="#" alt="#">
             <p>
-              Шоколадный пломбир<bg>
+              Шоколадный пломбир
               и лимонный сорбет
             </p>
           </div>
-          <div class="bg-image3"><img src="" alt="">
+          <div class="bg-image3"><img src="#" alt="#">
             <p>
-              Пломбир с помадкой<bg>
+              Пломбир с помадкой
               и клубничный щербет
             </p>
           </div>
         </div>
         <div class="control-box">
-          <input type="radio" name="" value="">
-          <input type="radio" name="" value="">
-          <input type="radio" name="" value="">
+          <input type="radio" name="bg-switch1" value="#">
+          <input type="radio" name="bg-switch2" value="#">
+          <input type="radio" name="bg-switch3" value="#">
           <div class="control-button"><a href="#">Дайте оба!</a></div>
         </div>
-        <div class="banner">
+        <div class="banner-box">
           <ul class="banner-list">
             <li>
               <h2>Малинка даром!</h2>
               <p>
-                При покупке 2 кг любого фруктового мороженого,<br>
-                добавим в ваш заказ добавим банку<br>
-                малинового варенья бесплатно<br>
+                При покупке 2 кг любого фруктового мороженого,
+                добавим в ваш заказ добавим банку
+                малинового варенья бесплатно
               </p>
               <a href="#">Хочу варенье!</a>
             </li>
             <li>
               <h2>Шоколадки даром!</h2>
               <p>
-                При покупке 2 кг пломбира, добавим в ваш<br>
-                заказ упаковку вкуснейшей шоколадной<br>
-                присыпки совершенно бесплатно.<br>
+                При покупке 2 кг пломбира, добавим в ваш
+                заказ упаковку вкуснейшей шоколадной
+                присыпки совершенно бесплатно.
               </p>
               <a href="#">Хочу шоколадки!</a>
             </li>
           </ul>
         </div>
-        <div class="hits">
+        <div class="hits-box">
           <ul class="hits-item">
             <li>
-              <img src="" alt="">
-              <img src="" alt="">
+              <img src="#" alt="#">
+              <img src="#" alt="#">
               <span>310/кг</span>
               <p>
                 Сливочное с апельсиновым джемом и цитрусовой стружкой
               </p>
             </li>
             <li>
-              <img src="" alt="">
-              <img src="" alt="">
+              <img src="#" alt="#">
+              <img src="#" alt="#">
               <span>380/кг</span>
               <p>
                 Сливочно-кофейное с кусочками шоколада
               </p>
             </li>
             <li>
-              <img src="" alt="">
-              <img src="" alt="">
+              <img src="#" alt="#">
+              <img src="#" alt="#">
               <span>355/кг</span>
               <p>
                 Сливочно-клубничное с присыпкой из белого шоколада
               </p>
             </li>
             <li>
-              <img src="" alt="">
-              <img src="" alt="">
+              <img src="#" alt="#">
+              <img src="#" alt="#">
               <span>415/кг</span>
               <p>
                 Сливочное крем-брюле с карамельной подливкой
@@ -122,9 +122,86 @@
             </li>
           </ul>
         </div>
-    </content>
-    <footer></footer>
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+        <div class="seo-box">
+          <h1>Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
+          <ul class="seo-list">
+            <li>
+              <p>
+                Все наше мороженное изготавливается на собственном производстве,
+                с использованием современного оборудования и проверенных временем технологий.
+              </p>
+            </li>
+            <li>
+              <p>
+                Закупка ингридиентов производится только у проверенных фермерских хозяйств и компаний,
+                с которыми нас связывает долговременное сотрудничество.
+              </p>
+            </li>
+            <li>
+              <p>
+                Для приготовления мороеженного используются настоящие сливки и молоко высочайшего качества.
+                Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.
+              </p>
+            </li>
+            <li>
+              <p>
+                Доставка нашего мороженного до заказчиков осуществляется в специальном термопаке,
+                который не дает мороженному растаять в пути и позволяет сохранить превосходный вкус.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="news-box">
+          <ul class="news-list">
+            <li></li>
+            <li>
+              <p>
+                Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
+                что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
+              </p>
+              <input type="text" value="" placeholder="Электронная почта">
+              <button type="button" name="button">Отправить</button>
+            </li>
+          </ul>
+        </div>
+        <div class="address-box">
+          <div class="maps"></div>
+          <div class="address-item">
+            <p>
+              Адрес главноего офиса и офлайн магазина:
+              <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
+            </p>
+            <p>
+              Для заказов по телефону:
+              <b>8 812 450-25-25</b>
+              (c 10 до 20 ежедневно)
+            </p>
+            <a href="#">Форма обратной связи</a>
+          </div>
+        </div>
+    </section>
+    <footer>
+      <div class="footer-social">
+        <ul class="social-list">
+          <li class="twitter"><img src="#" alt="twitter"></li>
+          <li class="instagram"><img src="#" alt="instagram"></li>
+          <li class="facebook"><img src="#" alt="facebook"></li>
+          <li class="vk"><img src="#" alt="vk"></li>
+        </ul>
+      </div>
+      <nav class="footer-menu">
+        <ul>
+          <li><a href="#">Для поставщиков</a></li>
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">О производстве</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
+      </nav>
+      <div class="footer-banner">
+        <img src="#" alt="htmlacademy">
+        <p>html academy</p>
+        <p><a href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy 2017</a></p>
+      </div>
+    </footer>
   </body>
 </html>
