Изменил разметку <ul> на <div>
Validator:
Errors: 0
Events: 0

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
           <div class="control-button"><a href="#">Дайте оба!</a></div>
         </div>
         <div class="banner-box">
-          <ul class="banner-list">
-            <li>
+          <div class="banner-item">
               <h2>Малинка даром!</h2>
               <p>
                 При покупке 2 кг любого фруктового мороженого,
@@ -74,8 +73,8 @@
                 малинового варенья бесплатно
               </p>
               <a href="#">Хочу варенье!</a>
-            </li>
-            <li>
+          </div>
+          <div class="banner-item2">
               <h2>Шоколадки даром!</h2>
               <p>
                 При покупке 2 кг пломбира, добавим в ваш
@@ -83,73 +82,72 @@
                 присыпки совершенно бесплатно.
               </p>
               <a href="#">Хочу шоколадки!</a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="hits-box">
-          <ul class="hits-item">
-            <li>
+            <div class="hits-item">
               <img src="#" alt="#">
               <img src="#" alt="#">
               <span>310/кг</span>
               <p>
                 Сливочное с апельсиновым джемом и цитрусовой стружкой
               </p>
-            </li>
-            <li>
+            </div>
+            <div class="hits-item">
               <img src="#" alt="#">
               <img src="#" alt="#">
               <span>380/кг</span>
               <p>
                 Сливочно-кофейное с кусочками шоколада
               </p>
-            </li>
-            <li>
+            </div>
+            <div class="hits-item">
               <img src="#" alt="#">
               <img src="#" alt="#">
               <span>355/кг</span>
               <p>
                 Сливочно-клубничное с присыпкой из белого шоколада
               </p>
-            </li>
-            <li>
+            </div>
+            <div class="hits-item">
               <img src="#" alt="#">
               <img src="#" alt="#">
               <span>415/кг</span>
               <p>
                 Сливочное крем-брюле с карамельной подливкой
               </p>
-            </li>
-          </ul>
+            </div>
         </div>
         <div class="seo-box">
           <h1>Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
-          <ul class="seo-list">
-            <li>
+          <div class="seo-item">
+            <div>
               <p>
                 Все наше мороженное изготавливается на собственном производстве,
                 с использованием современного оборудования и проверенных временем технологий.
               </p>
-            </li>
-            <li>
+            </div>
+            <div>
               <p>
                 Закупка ингридиентов производится только у проверенных фермерских хозяйств и компаний,
                 с которыми нас связывает долговременное сотрудничество.
               </p>
-            </li>
-            <li>
+            </div>
+          </div>
+          <div class="seo-item">
+            <div>
               <p>
                 Для приготовления мороеженного используются настоящие сливки и молоко высочайшего качества.
                 Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.
               </p>
-            </li>
-            <li>
+            </div>
+            <div>
               <p>
                 Доставка нашего мороженного до заказчиков осуществляется в специальном термопаке,
                 который не дает мороженному растаять в пути и позволяет сохранить превосходный вкус.
               </p>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
         <div class="news-box">
           <ul class="news-list">
@@ -182,12 +180,10 @@
     </section>
     <footer>
       <div class="footer-social">
-        <ul class="social-list">
-          <li class="twitter"><img src="#" alt="twitter"></li>
-          <li class="instagram"><img src="#" alt="instagram"></li>
-          <li class="facebook"><img src="#" alt="facebook"></li>
-          <li class="vk"><img src="#" alt="vk"></li>
-        </ul>
+          <div class="twitter"><img src="#" alt="twitter"></div>
+          <div class="instagram"><img src="#" alt="instagram"></div>
+          <div class="facebook"><img src="#" alt="facebook"></div>
+          <div class="vk"><img src="#" alt="vk"></div>
       </div>
       <nav class="footer-menu">
         <ul>
