--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <div class="header-item1">
-        <div class="header-logo"><img src="#" alt="#"></div>
+        <div class="header-logo"><img src="#" alt="img"></div>
         <nav class="menu">
           <ul class="menu-list">
             <li class="active"><a href="#">Каталог</a>
@@ -26,9 +26,9 @@
         </nav>
       </div>
       <div class="header-item2">
-        <span class="item2-search"><img src="#" alt="#"></span>
-        <span class="item2-signin"><a href="#"><img src="#" alt="#">Вход</a></span>
-        <span class="item2-shipcart"><a href="#"><img src="#" alt="#">Пусто</a></span>
+        <span class="item2-search"><img src="#" alt="img"></span>
+        <span class="item2-signin"><a href="#"><img src="#" alt="img">Вход</a></span>
+        <span class="item2-shipcart"><a href="#"><img src="#" alt="img">Пусто</a></span>
       </div>
     </header>
     <section>
@@ -39,19 +39,19 @@
           </p>
         </div>
         <div class="slider-box">
-          <div class="bg-image1"><img src="#" alt="#">
+          <div class="bg-image1"><img src="#" alt="img">
             <p>
               Крем-брюле и пломбир
                с малиновым джемом
              </p>
           </div>
-          <div class="bg-image2"><img src="#" alt="#">
+          <div class="bg-image2"><img src="#" alt="img">
             <p>
               Шоколадный пломбир
               и лимонный сорбет
             </p>
           </div>
-          <div class="bg-image3"><img src="#" alt="#">
+          <div class="bg-image3"><img src="#" alt="img">
             <p>
               Пломбир с помадкой
               и клубничный щербет
@@ -86,32 +86,32 @@
         </div>
         <div class="hits-box">
             <div class="hits-item">
-              <img src="#" alt="#">
-              <img src="#" alt="#">
+              <img src="#" alt="img">
+              <img src="#" alt="img">
               <span>310/кг</span>
               <p>
                 Сливочное с апельсиновым джемом и цитрусовой стружкой
               </p>
             </div>
             <div class="hits-item">
-              <img src="#" alt="#">
-              <img src="#" alt="#">
+              <img src="#" alt="img">
+              <img src="#" alt="img">
               <span>380/кг</span>
               <p>
                 Сливочно-кофейное с кусочками шоколада
               </p>
             </div>
             <div class="hits-item">
-              <img src="#" alt="#">
-              <img src="#" alt="#">
+              <img src="#" alt="img">
+              <img src="#" alt="img">
               <span>355/кг</span>
               <p>
                 Сливочно-клубничное с присыпкой из белого шоколада
               </p>
             </div>
             <div class="hits-item">
-              <img src="#" alt="#">
-              <img src="#" alt="#">
+              <img src="#" alt="img">
+              <img src="#" alt="img">
               <span>415/кг</span>
               <p>
                 Сливочное крем-брюле с карамельной подливкой
@@ -180,10 +180,10 @@
     </section>
     <footer>
       <div class="footer-social">
-          <div class="twitter"><img src="#" alt="twitter"></div>
-          <div class="instagram"><img src="#" alt="instagram"></div>
-          <div class="facebook"><img src="#" alt="facebook"></div>
-          <div class="vk"><img src="#" alt="vk"></div>
+          <div class="twitter"><img src="#" alt="img"></div>
+          <div class="instagram"><img src="#" alt="img"></div>
+          <div class="facebook"><img src="#" alt="img"></div>
+          <div class="vk"><img src="#" alt="img"></div>
       </div>
       <nav class="footer-menu">
         <ul>
@@ -194,7 +194,7 @@
         </ul>
       </nav>
       <div class="footer-banner">
-        <img src="#" alt="htmlacademy">
+        <img src="#" alt="img">
         <p>html academy</p>
         <p><a href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy 2017</a></p>
       </div>
