Изменил ul на div в блоке news.
Document checking completed. No errors or warnings to show.

Used the HTML parser.
Total execution time 12 milliseconds.

--- a/index.html
+++ b/index.html
@@ -150,17 +150,15 @@
           </div>
         </div>
         <div class="news-box">
-          <ul class="news-list">
-            <li></li>
-            <li>
+          <div class="news-item"></div>
+            <div class="news-item">
               <p>
                 Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
                 что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
               </p>
               <input type="text" value="" placeholder="Электронная почта">
               <button type="button" name="button">Отправить</button>
-            </li>
-          </ul>
+            </div>
         </div>
         <div class="address-box">
           <div class="maps"></div>
