--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <ul class="popup-list">
                 <li><a href="#">Новинки</a></li>
                 <li><a href="#">Сливочное</a></li>
-                <li class="active"><a href="#">Щербеты</a></li>
+                <li class="active"><a href="catalog.html">Щербеты</a></li>
                 <li><a href="#">Фруктовый лед</a></li>
                 <li><a href="#">Мелорин</a></li>
               </ul>
@@ -26,19 +26,20 @@
         </nav>
       </div>
       <div class="header-item2">
-        <span class="item2-search"><img src="#" alt="img"></span>
-        <span class="item2-signin"><a href="#"><img src="#" alt="img">Вход</a></span>
-        <span class="item2-shipcart"><a href="#"><img src="#" alt="img">Пусто</a></span>
-      </div>
-    </header>
-    <section>
+          <a class="item2-search" href="#">!search</a>
+          <a class="item2-signin" href="#">Вход</a>
+          <a class="item2-shipcart" href="#">Пусто</a>
         <div class="time">
           <p>
             С 10 до 20, ежедневно
           <b>8 812 450-25-25</b>
           </p>
         </div>
-        <div class="slider-box">
+      </div>
+    </header>
+
+    <main>
+        <section class="slider-box">
           <div class="bg-image1"><img src="#" alt="img">
             <p>
               Крем-брюле и пломбир
@@ -57,14 +58,16 @@
               и клубничный щербет
             </p>
           </div>
-        </div>
-        <div class="control-box">
+        </section>
+
+        <section class="control-box">
           <input type="radio" name="bg-switch1" value="#">
           <input type="radio" name="bg-switch2" value="#">
           <input type="radio" name="bg-switch3" value="#">
           <div class="control-button"><a href="#">Дайте оба!</a></div>
-        </div>
-        <div class="banner-box">
+        </section>
+
+        <section class="banner-box">
           <div class="banner-item">
               <h2>Малинка даром!</h2>
               <p>
@@ -83,42 +86,39 @@
               </p>
               <a href="#">Хочу шоколадки!</a>
           </div>
-        </div>
-        <div class="hits-box">
-            <div class="hits-item">
-              <img src="#" alt="img">
-              <img src="#" alt="img">
-              <span>310/кг</span>
-              <p>
+        </section>
+        <section class="hits-box">
+          <ul class="hits-item">
+            <li>
+              <img href="" alt="">
+              <span>310</span><span>/Кг</span>
+              <h3>
                 Сливочное с апельсиновым джемом и цитрусовой стружкой
-              </p>
-            </div>
-            <div class="hits-item">
+              </h3>
+            </li>
+            <li>
               <img src="#" alt="img">
-              <img src="#" alt="img">
-              <span>380/кг</span>
-              <p>
+              <span>380</span><span>/кг</span>
+              <h3>
                 Сливочно-кофейное с кусочками шоколада
-              </p>
-            </div>
-            <div class="hits-item">
-              <img src="#" alt="img">
-              <img src="#" alt="img">
-              <span>355/кг</span>
-              <p>
-                Сливочно-клубничное с присыпкой из белого шоколада
-              </p>
-            </div>
-            <div class="hits-item">
-              <img src="#" alt="img">
-              <img src="#" alt="img">
-              <span>415/кг</span>
-              <p>
-                Сливочное крем-брюле с карамельной подливкой
-              </p>
-            </div>
-        </div>
-        <div class="seo-box">
+              </h3>
+            </li>
+            <li>
+            <img src="#" alt="img">
+            <span>355</span><span>/кг</span>
+            <h3>
+              Сливочно-клубничное с присыпкой из белого шоколада
+            </h3>  </li>
+            <li>
+            <img src="#" alt="img">
+            <span>415</span><span>/кг</span>
+            <h3>
+              Сливочное крем-брюле с карамельной подливкой
+            </h3>  </li>
+          </li>
+        </section>
+
+        <section class="seo-box">
           <h1>Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
           <div class="seo-item">
             <div>
@@ -148,9 +148,13 @@
               </p>
             </div>
           </div>
-        </div>
-        <div class="news-box">
-          <div class="news-item"></div>
+        </section>
+
+        <section class="news-box">
+          <article class="news-item">
+            <span>Новое в нашем блоке</span>
+            <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
+          </article>
             <div class="news-item">
               <p>
                 Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
@@ -159,8 +163,8 @@
               <input type="text" value="" placeholder="Электронная почта">
               <button type="button" name="button">Отправить</button>
             </div>
-        </div>
-        <div class="address-box">
+        </section>
+        <section class="address-box">
           <div class="maps"></div>
           <div class="address-item">
             <p>
@@ -174,14 +178,16 @@
             </p>
             <a href="#">Форма обратной связи</a>
           </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <footer>
       <div class="footer-social">
-          <div class="twitter"><img src="#" alt="img"></div>
-          <div class="instagram"><img src="#" alt="img"></div>
-          <div class="facebook"><img src="#" alt="img"></div>
-          <div class="vk"><img src="#" alt="img"></div>
+        <ul>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Vkontakte</a></li>
+        </ul>
       </div>
       <nav class="footer-menu">
         <ul>
@@ -197,5 +203,13 @@
         <p><a href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy 2017</a></p>
       </div>
     </footer>
+    <div class="modal-callback"></div>
+    <div class="modal-upanel">
+      <input type="text">
+      <input type="password">
+      <button type="button">Войти</button>
+      <a href="#">Забыли пароль?</a>
+      <a href="#">Новая регистрация</a>
+    </div>
   </body>
 </html>
