--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <ul class="popup-list">
                 <li><a href="#">Новинки</a></li>
                 <li><a href="#">Сливочное</a></li>
-                <li class="active"><a href="catalog.html">Щербеты</a></li>
+                <li><a href="catalog.html">Щербеты</a></li>
                 <li><a href="#">Фруктовый лед</a></li>
                 <li><a href="#">Мелорин</a></li>
               </ul>
