--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,36 @@
   <title>HTML Academy: Глейси</title>
 </head>
 <body>
-
+  <header>
+    <div class="header-item1">
+      <div class="header-logo"><img src="#" alt="img"></div>
+      <nav class="menu">
+        <ul class="menu-list">
+          <li class="active"><a href="#">Каталог</a>
+            <ul class="popup-list">
+              <li><a href="#">Новинки</a></li>
+              <li><a href="#">Сливочное</a></li>
+              <li class="active"><a href="catalog.html">Щербеты</a></li>
+              <li><a href="#">Фруктовый лед</a></li>
+              <li><a href="#">Мелорин</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Доставка и оплата</a></li>
+          <li><a href="#">О Компании</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="header-item2">
+        <a class="item2-search" href="#">!search</a>
+        <a class="item2-signin" href="#">Вход</a>
+        <a class="item2-shipcart" href="#">Пусто</a>
+      <div class="time">
+        <p>
+          С 10 до 20, ежедневно
+        <b>8 812 450-25-25</b>
+        </p>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
