Добавил link на index.html

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <ul class="menu-list">
           <li class="active"><a href="#">Каталог</a>
             <ul class="popup-list">
-              <li><a href="#">Новинки</a></li>
+              <li><a href="index.html">Новинки</a></li>
               <li><a href="#">Сливочное</a></li>
               <li class="active"><a href="catalog.html">Щербеты</a></li>
               <li><a href="#">Фруктовый лед</a></li>
