--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
+
     <header>
       <div class="header-item1">
-        <div class="header-logo"><img src="#" alt="img"></div>
+        <div class="header-logo">
+          <a><img src="http://placehold.it/150x100" width="150" height="150" alt="Логотип интернет-магазина Gllacy"></a>
+      </div>
         <nav class="menu">
           <ul class="menu-list">
             <li class="active"><a href="#">Каталог</a>
               <ul class="popup-list">
                 <li><a href="#">Новинки</a></li>
-                <li><a href="#">Сливочное</a></li>
-                <li><a href="catalog.html">Щербеты</a></li>
+                <li><a href="catalog.html">Сливочное</a></li>
+                <li><a href="#">Щербеты</a></li>
                 <li><a href="#">Фруктовый лед</a></li>
                 <li><a href="#">Мелорин</a></li>
               </ul>
@@ -26,44 +29,38 @@
         </nav>
       </div>
       <div class="header-item2">
-          <a class="item2-search" href="#">!search</a>
-          <a class="item2-signin" href="#">Вход</a>
+          <a class="item2-search" href="#">Поиск</a>
+          <ul class="user-profile">
+            <li class="profile-signin"><a href="#">Вход</a></li>
+          </ul>
           <a class="item2-shipcart" href="#">Пусто</a>
-        <div class="time">
-          <p>
+          <span class="time-work">
             С 10 до 20, ежедневно
-          <b>8 812 450-25-25</b>
-          </p>
-        </div>
+            <a href="tel:88124502525">8 812 450-25-25</a>
+          </span>
       </div>
     </header>
 
     <main>
-        <section class="slider-box">
-          <div class="bg-image1"><img src="#" alt="img">
-            <p>
-              Крем-брюле и пломбир
-               с малиновым джемом
-             </p>
-          </div>
-          <div class="bg-image2"><img src="#" alt="img">
-            <p>
-              Шоколадный пломбир
-              и лимонный сорбет
-            </p>
-          </div>
-          <div class="bg-image3"><img src="#" alt="img">
-            <p>
-              Пломбир с помадкой
-              и клубничный щербет
-            </p>
-          </div>
+        <section class="slider">
+          <ul class="slider-list">
+            <li class="list-image1">
+              <img src="http://placehold.it/150x100" width="150" height="150" alt="Крем-брюле и пломбир с малиновым джемом">
+                <p>Крем-брюле и пломбир с малиновым джемом</p>
+            </li>
+            <li class="list-image2">
+              <img src="http://placehold.it/150x100" width="150" height="150" alt="Шоколадный пломбир и лимонный сорбет">
+                <p>Шоколадный пломбири лимонный сорбет</p>
+            </li>
+            <li class="list-image3">
+              <img src="http://placehold.it/150x100" width="150" height="150" alt="Пломбир с помадкой и клубничный щербет">
+                <p>Пломбир с помадкой и клубничный щербет</p>
+            </li>
+          </ul>
         </section>
 
         <section class="control-box">
-          <input type="radio" name="bg-switch1" value="#">
-          <input type="radio" name="bg-switch2" value="#">
-          <input type="radio" name="bg-switch3" value="#">
+          <!-- Здесь будет 3 <input type="radio"  -->
           <div class="control-button"><a href="#">Дайте оба!</a></div>
         </section>
 
@@ -77,7 +74,7 @@
               </p>
               <a href="#">Хочу варенье!</a>
           </div>
-          <div class="banner-item2">
+          <div class="banner-item">
               <h2>Шоколадки даром!</h2>
               <p>
                 При покупке 2 кг пломбира, добавим в ваш
@@ -87,35 +84,36 @@
               <a href="#">Хочу шоколадки!</a>
           </div>
         </section>
+
         <section class="hits-box">
           <ul class="hits-item">
             <li>
-              <img href="" alt="">
-              <span>310</span><span>/Кг</span>
+              <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <span>310</span>
+              <span>/Кг</span>
+              <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+            </li>
+            <li>
+              <img src="http://placehold.it/150x100" alt="Сливочно-кофейное с кусочками шоколада">
+              <span>380</span>
+              <span>/кг</span>
+              <h3>Сливочно-кофейное с кусочками шоколада</h3>
+            </li>
+            <li>
+              <img src="http://placehold.it/150x100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <span>355</span>
+              <span>/кг</span>
               <h3>
-                Сливочное с апельсиновым джемом и цитрусовой стружкой
+                Сливочно-клубничное с присыпкой из белого шоколада
               </h3>
             </li>
             <li>
-              <img src="#" alt="img">
-              <span>380</span><span>/кг</span>
-              <h3>
-                Сливочно-кофейное с кусочками шоколада
-              </h3>
+              <img src="http://placehold.it/150x100" alt="Сливочное крем-брюле с карамельной подливкой">
+              <span>415</span>
+              <span>/кг</span>
+              <h3>Сливочное крем-брюле с карамельной подливкой</h3>
             </li>
-            <li>
-            <img src="#" alt="img">
-            <span>355</span><span>/кг</span>
-            <h3>
-              Сливочно-клубничное с присыпкой из белого шоколада
-            </h3>  </li>
-            <li>
-            <img src="#" alt="img">
-            <span>415</span><span>/кг</span>
-            <h3>
-              Сливочное крем-брюле с карамельной подливкой
-            </h3>  </li>
-          </li>
+        </ul>
         </section>
 
         <section class="seo-box">
@@ -160,26 +158,28 @@
                 Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
                 что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
               </p>
-              <input type="text" value="" placeholder="Электронная почта">
-              <button type="button" name="button">Отправить</button>
+                <!-- Здесь будет input type="text"  -->
+                <!-- Здесь будет <button>  -->
             </div>
         </section>
-        <section class="address-box">
-          <div class="maps"></div>
-          <div class="address-item">
-            <p>
-              Адрес главноего офиса и офлайн магазина:
-              <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
-            </p>
-            <p>
-              Для заказов по телефону:
-              <b>8 812 450-25-25</b>
-              (c 10 до 20 ежедневно)
-            </p>
-            <a href="#">Форма обратной связи</a>
-          </div>
-        </section>
     </main>
+
+    <section class="address-box">
+      <div class="address-maps"></div>
+      <div class="address-item">
+        <p>
+          Адрес главноего офиса и офлайн магазина:
+          <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
+        </p>
+        <p>
+          Для заказов по телефону:
+          <b>8 812 450-25-25</b>
+          (c 10 до 20 ежедневно)
+        </p>
+        <a href="#callback">Форма обратной связи</a>
+      </div>
+    </section>
+
     <footer>
       <div class="footer-social">
         <ul>
@@ -193,23 +193,17 @@
         <ul>
           <li><a href="#">Для поставщиков</a></li>
           <li><a href="#">Наши документы</a></li>
+        </ul>
+        <ul>
           <li><a href="#">О производстве</a></li>
           <li><a href="#">Экологические стандарты</a></li>
         </ul>
       </nav>
       <div class="footer-banner">
-        <img src="#" alt="img">
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="HTML Academy 2017">
         <p>html academy</p>
         <p><a href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy 2017</a></p>
       </div>
     </footer>
-    <div class="modal-callback"></div>
-    <div class="modal-upanel">
-      <input type="text">
-      <input type="password">
-      <button type="button">Войти</button>
-      <a href="#">Забыли пароль?</a>
-      <a href="#">Новая регистрация</a>
-    </div>
   </body>
 </html>
