--- a/catalog.html
+++ b/catalog.html
@@ -41,6 +41,13 @@
     </div>
   </header>
   <main class="container">
+    <section>
+      <ul class="brearcrumbs">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="catalog.html">Сливочное</a></li>
+      </ul>
+    </section>
     <div class="filters-block">
       <div class="filter-item1">
         <h1>Сливочное мороженное</h1>
