--- a/catalog.html
+++ b/catalog.html
@@ -40,15 +40,16 @@
         </span>
     </div>
   </header>
-  <main class="container">
-    <section>
-      <ul class="brearcrumbs">
+  <main>
+    <section class="breadcrumbs-block">
+      <ul class="breadcrumbs-list">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Каталог</a></li>
         <li><a href="catalog.html">Сливочное</a></li>
       </ul>
     </section>
-    <div class="filters-block">
+
+    <section class="filters-block">
       <div class="filter-item1">
         <h1>Сливочное мороженное</h1>
         <span>Сортировка</span>
@@ -63,9 +64,10 @@
           <!-- Здесь будет 4 <input type="checkbox"> -->
           <!-- Здесь будет <button>  -->
       </div>
-    </div>
+    </section>
 
-    <ul class="product-list">
+    <section class="catalog-block">
+    <ul class="catalog-list">
       <li>
         <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
         <span>310</span>
@@ -145,6 +147,9 @@
         <h3>Сливочное с мятным сиропом</h3>
         </li>
       </ul>
+    </section>
+
+    <section class="page-block">
       <ul class="page-list">
         <li class="page-list-active">1</li>
         <li>2</li>
@@ -152,6 +157,7 @@
         <li>4</li>
         <li>5</li>
       </ul>
+    </section>
   </main>
 
   <footer>
