--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
           </ul>
         </section>
 
-        <section class="control-box">
+        <section class="control-block">
           <!-- Здесь будет 3 <input type="radio"  -->
           <div class="control-button"><a href="#">Дайте оба!</a></div>
         </section>
 
-        <section class="banner-box">
+        <section class="banner-block">
           <div class="banner-item">
               <h2>Малинка даром!</h2>
               <p>
@@ -85,8 +85,8 @@
           </div>
         </section>
 
-        <section class="hits-box">
-          <ul class="hits-item">
+        <section class="hits-block">
+          <ul class="hits-list">
             <li>
               <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <span>310</span>
@@ -116,7 +116,7 @@
         </ul>
         </section>
 
-        <section class="seo-box">
+        <section class="seo-block">
           <h1>Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
           <div class="seo-item">
             <div>
@@ -148,7 +148,7 @@
           </div>
         </section>
 
-        <section class="news-box">
+        <section class="news-block">
           <article class="news-item">
             <span>Новое в нашем блоке</span>
             <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
@@ -164,7 +164,7 @@
         </section>
     </main>
 
-    <section class="address-box">
+    <section class="address-block">
       <div class="address-maps"></div>
       <div class="address-item">
         <p>
