Изменил классы: visually-hidden

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <main>
         <section class="slider">
-          <h3 class="hidden-title">Слайды</h3>
+          <h3 class="visually-hidden">Слайды</h3>
           <ul class="slider-list">
             <li id="brulee" class="list-image1">
               <img src="http://placehold.it/150x100" width="150" height="150" alt="Крем-брюле и пломбир с малиновым джемом">
@@ -77,7 +77,7 @@
         </section>
 
         <section class="control-block">
-          <h3 class="hidden-title">Панель управления</h3>
+          <h3 class="visually-hidden">Панель управления</h3>
           <span class="radio-switch">
             <input type="radio" name="switch">
             <input type="radio" name="switch">
@@ -89,7 +89,7 @@
         </section>
 
         <section class="banner-block">
-          <h3 class="hidden-title">Рекламный блок</h3>
+          <h3 class="visually-hidden">Рекламный блок</h3>
           <div class="banner-item">
             <h2>Малинка даром!</h2>
             <p>
@@ -111,7 +111,7 @@
         </section>
 
         <section class="hits-block">
-          <h3 class="hidden-title">Хиты нашего продутка</h3>
+          <h3 class="visually-hidden">Хиты нашего продутка</h3>
           <ul class="hits-list">
             <li>
               <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
@@ -141,7 +141,7 @@
         </section>
 
         <section class="seo-block">
-          <h3 class="hidden-title">Подробнее о нашем магазине</h3>
+          <h3 class="visually-hidden">Подробнее о нашем магазине</h3>
           <h1>Магазин Глэйси - это оналайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h1>
           <ul class="seo-list">
             <li class="seo-item">
@@ -172,9 +172,9 @@
         </section>
 
         <section class="news-block">
-          <h3 class="hidden-title">Наши новости</h3>
+          <h3 class="visually-hidden">Наши новости</h3>
           <article class="news-item">
-            <h3 class="hidden-title">Новости нашего блога</h3>
+            <h3 class="visually-hidden">Новости нашего блога</h3>
             <span>Новое в нашем блоке</span>
             <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
           </article>
@@ -192,7 +192,7 @@
     </main>
 
     <section class="address-block">
-      <h3 class="hidden-title">Наше местонахождение</h3>
+      <h3 class="visually-hidden">Наше местонахождение</h3>
       <div class="address-maps"></div>
       <div class="address-item">
         <p>
@@ -224,13 +224,13 @@
         <a href="#">Экологические стандарты</a>
       </nav>
       <div class="footer-banner">
-        <img src="http://placehold.it/150x100" width="50" height="50" alt="HTML Academy 2017">
+        <img src="http://placehold.it/150x100" width="50" height="150" alt="HTML Academy 2017">
         <p>html academy</p>
         <p><a href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy 2017</a></p>
       </div>
     </footer>
     <section id="callback" class="popup-callback">
-      <h3 class="hidden-title">Форма обратной связи</h3>
+      <h3 class="visually-hidden">Форма обратной связи</h3>
       <span>Мы обязательно вам ответим!</span>
       <form action="#" id="callback-form" method="GET">
         <input type="text" name="callback-form" placeholder="Как вас зовут?"><br>
