Изменил классы на: visually-hidden

--- a/catalog.html
+++ b/catalog.html
@@ -81,7 +81,7 @@
   </header>
   <main>
     <section class="breadcrumbs-block">
-      <h3 class="hidden-title">Хлебные крошки</h3>
+      <h3 class="visually-hidden">Хлебные крошки</h3>
       <ul class="breadcrumbs-list">
         <li><a href="index.html">Главная</a></li>
         <li><a href="catalog.html">Каталог</a></li>
@@ -90,7 +90,7 @@
     </section>
 
     <section class="filters-block">
-      <h3 class="hidden-title">Фильтр</h3>
+      <h3 class="visually-hidden">Фильтр</h3>
       <form action="#" id="filter-form" method="GET">
         <span class="filter-sort">
           <span>Сортировка:</span>
@@ -224,7 +224,7 @@
     </section>
 
     <section class="page-block">
-      <h3 class="hidden-title">Нумерация страниц</h3>
+      <h3 class="visually-hidden">Нумерация страниц</h3>
       <ul class="page-list">
         <li class="page-list-active">1</li>
         <li>2</li>
