--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header>
       <div class="header-item1">
         <div class="header-logo">
-          <a><img src="http://placehold.it/150x100" width="150" height="150" alt="Логотип интернет-магазина Gllacy"></a>
+          <a><img src="img/logo.svg" width="150" height="150" alt="Логотип интернет-магазина Gllacy."></a>
         </div>
         <nav class="menu">
           <ul class="menu-list">
             <li class="active"><a href="#">Каталог</a>
               <ul class="popup-list">
-                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Новинки</a></li
                 <li><a href="catalog.html">Сливочное</a></li>
                 <li><a href="#">Щербеты</a></li>
                 <li><a href="#">Фруктовый лед</a></li>
@@ -62,15 +62,15 @@
           <h3 class="visually-hidden">Слайды</h3>
           <ul class="slider-list">
             <li id="brulee" class="list-image1">
-              <img src="http://placehold.it/150x100" width="150" height="150" alt="Крем-брюле и пломбир с малиновым джемом">
+              <img src="img/ice-cream-main1.png" width="150" height="150" alt="Мороженное крем-брюле и пломбир с малиновым джемом.">
               <p>Крем-брюле и пломбир с малиновым джемом</p>
             </li>
             <li class="list-image2">
-              <img src="http://placehold.it/150x100" width="150" height="150" alt="Шоколадный пломбир и лимонный сорбет">
+              <img src="img/ice-cream-main2.png" width="150" height="150" alt="Мороженное шоколадный пломбир и лимонный сорбет.">
               <p>Шоколадный пломбир и лимонный сорбет</p>
             </li>
             <li class="list-image3">
-              <img src="http://placehold.it/150x100" width="150" height="150" alt="Пломбир с помадкой и клубничный щербет">
+              <img src="img/ice-cream-main3.png" width="150" height="150" alt="Мороженое пломбир с помадкой и клубничный щербет.">
               <p>Пломбир с помадкой и клубничный щербет</p>
             </li>
           </ul>
@@ -114,25 +114,25 @@
           <h3 class="visually-hidden">Хиты нашего продутка</h3>
           <ul class="hits-list">
             <li>
-              <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <img src="img/hits-ice-cream-1.jpg" alt="Хит продаж. Мороженное сливочное с апельсиновым джемом и цитрусовой стружкой.">
               <span>310</span>
               <span>/Кг</span>
               <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
             </li>
             <li>
-              <img src="http://placehold.it/150x100" alt="Сливочно-кофейное с кусочками шоколада">
+              <img src="img/hits-ice-cream-2.jpg" alt="Хит продаж. Мороженное сливочно-кофейное с кусочками шоколада.">
               <span>380</span>
               <span>/кг</span>
               <h3>Сливочно-кофейное с кусочками шоколада</h3>
             </li>
             <li>
-              <img src="http://placehold.it/150x100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <img src="img/hits-ice-cream-3.jpg" alt="Хит продаж. Мороженное сливочно-клубничное с присыпкой из белого шоколада.">
               <span>355</span>
               <span>/кг</span>
               <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
             </li>
             <li>
-              <img src="http://placehold.it/150x100" alt="Сливочное крем-брюле с карамельной подливкой">
+              <img src="img/hits-ice-cream-4.jpg" alt="Хит продаж. Мороженное сливочное крем-брюле с карамельной подливкой.">
               <span>415</span>
               <span>/кг</span>
               <h3>Сливочное крем-брюле с карамельной подливкой</h3>
